--- a/styles/style.css
+++ b/styles/style.css
@@ -207,6 +207,11 @@ main {
     justify-self: flex-end;
 }
 
+.item-amount div:nth-of-type(1):hover,
+.item-amount div:nth-of-type(2):hover {
+    background-color: var(--orange-color);
+} 
+
 .remove-icon, 
 .add-icon {
     width: 100%;
@@ -215,6 +220,12 @@ main {
     text-align: center;
     vertical-align: middle;
 }
+
+.item-amount div:nth-of-type(1):hover .remove-icon,
+.item-amount div:nth-of-type(2):hover .add-icon {
+    color: var(--bc-shipping);
+} 
+
 
 .price-detail {
     max-width: 100%;
